--- a/GuaGuo.Com.GuaGuoController/GuaGuo.Com.GuaGuoController.csproj
+++ b/GuaGuo.Com.GuaGuoController/GuaGuo.Com.GuaGuoController.csproj
@@ -39,10 +39,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -59,9 +64,6 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -406,6 +408,16 @@
     <Content Include="packages\Newtonsoft.Json.4.5.11\Newtonsoft.Json.4.5.11.nupkg" />
     <Content Include="packages\repositories.config" />
     <Content Include="packages\WebGrease.1.3.0\WebGrease.1.3.0.nupkg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GuaGuo.Com.WeixinModel\GuaGuo.Com.WeixinModels.csproj">
+      <Project>{497d505a-ce52-4034-a6c0-b68d4ea83e6d}</Project>
+      <Name>GuaGuo.Com.WeixinModels</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GuaGuo.Com.WeixinOrder\GuaGuo.Com.WeixinOrderService.csproj">
+      <Project>{4d2e4ae5-1efb-49ec-ab63-991f9edc769f}</Project>
+      <Name>GuaGuo.Com.WeixinOrderService</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
