--- a/GuaGuo.Com.WeixinOrder/GuaGuo.Com.WeixinOrderService.csproj
+++ b/GuaGuo.Com.WeixinOrder/GuaGuo.Com.WeixinOrderService.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Guests\GuestService.cs" />
+    <Compile Include="Orders\OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
