--- a/GuaGuo.Com.WeixinOrderProvider/GuaGuo.Com.WeixinOrderProvider.csproj
+++ b/GuaGuo.Com.WeixinOrderProvider/GuaGuo.Com.WeixinOrderProvider.csproj
@@ -80,7 +80,10 @@
   <ItemGroup>
     <Compile Include="Contexts\EntityContext.cs" />
     <Compile Include="Guests\GuestProvider.cs" />
+    <Compile Include="Oders\OrderProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Waiters\WaiterProvider.cs" />
+    <Compile Include="Workers\WorkerProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
