Model更新  部分Service设计

--- a/GuaGuo.Com.WeixinModel/GuaGuo.Com.WeixinModels.csproj
+++ b/GuaGuo.Com.WeixinModel/GuaGuo.Com.WeixinModels.csproj
@@ -63,6 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Guests\Guest.cs" />
+    <Compile Include="Lists\List.cs" />
+    <Compile Include="Lists\SpecialList.cs" />
     <Compile Include="Orders\Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Waiters\Waiter.cs" />
